--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "valid-ip",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Provides a small and reliable IPv4 and IPv6 validation library.",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,9 @@
   "bugs": {
     "url": "https://github.com/mateusabelli/valid-ip/issues"
   },
-  "homepage": "https://github.com/mateusabelli/valid-ip#readme"
+  "homepage": "https://github.com/mateusabelli/valid-ip#readme",
+  "devDependencies": {
+    "@types/jest": "^29.2.0",
+    "jest": "^29.2.1"
+  }
 }
