--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "valid-ip",
+  "description": "A small and reliable IPv4 and IPv6 validation library.",
   "version": "0.0.3",
-  "description": "Provides a small and reliable IPv4 and IPv6 validation library.",
+  "author": "Mateus Abelli",
+  "license": "MIT",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
@@ -21,14 +23,12 @@
     "regex",
     "ip address validation"
   ],
-  "author": "Mateus Abelli",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/mateusabelli/valid-ip/issues"
   },
   "homepage": "https://github.com/mateusabelli/valid-ip#readme",
   "devDependencies": {
-    "@types/jest": "^29.2.0",
-    "jest": "^29.2.1"
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0"
   }
 }
