--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./src/index.js",
   "types": "./src/types/index.d.ts",
   "scripts": {
-    "test": "jest --watchAll --verbose"
+    "test": "jest ./src/test"
   },
   "repository": {
     "type": "git",
