--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Setup pnpm
       uses: pnpm/action-setup@v2.2.4
       with:
+        version: 7.30.0
         run_install: false
         
     - name: Get pnpm store directory
