--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,5 +51,5 @@ jobs:
     - name: Install dependencies
       run: pnpm install
 
-    - run: pnpm run build --if-present
+    - run: pnpm run --if-present build
     - run: pnpm test
