Disable workflow job and add Dependabot

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "disabled" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "disabled" ]
 
 jobs:
   build:
@@ -33,7 +33,7 @@ jobs:
       with:
         version: 7.30.0
         run_install: false
-        
+
     - name: Get pnpm store directory
       id: pnpm-cache
       shell: bash
