--- a/api/api.csproj
+++ b/api/api.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\lib\dotnet\ValidIp.csproj" />
+  </ItemGroup>
+
 </Project>
