--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ version: 2
 updates:
   # Maintain dependencies for NPM
   - package-ecosystem: "npm"
-    directory: "library"
+    directory: "lib/nodejs"
     schedule:
       interval: "weekly"
 
